--- a/config.toml
+++ b/config.toml
@@ -40,3 +40,20 @@ name = "Introduction"
 weight = 1
 url = "/introduction/"
 
+[params]
+[[menu.main]]
+name = "dummydefinitions"
+weight = 1
+url = "/dummydefinition/"
+
+[params]
+[[menu.main]]
+name = "dummyresource"
+weight = 2
+url = "/dummyresource/"
+
+[params]
+[[menu.main]]
+name = "dummywalkthrough"
+weight = 3
+url = "/dummywalkthrough/"
